clusters/obs-w/platform/services/istio-gateway/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: workload-ingress
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*.obs-w.int.garys-lab.io"
      tls:
        mode: SIMPLE
        credentialName: obs-w-wildcard-tls
